add estilo .css

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
     <head>
         <title>Home</title>
-        <meta charset="UTF-8>
-        <meta name="home">
+        <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="estilos.css">
     </head>
     <body>
-        <div style="width: 50vw; height: 50vh; background-color: #88f; display: flex; 
-        flex-direction: row; align-items: center; justify-content: center">
-            Nome  <input type="text" name="nome" size="20"><br>
-            Senha  <input type="password" name="senha"  size="20">
+        <div class="clase1">
+            <div class="classe2">
+                Nome  <input type="text" name="nome" size="20"><br>
+                Senha  <input type="password" name="senha"  size="20">
+            </div>
         </div>
     </body>
 </html>
