--- a/index.html
+++ b/index.html
@@ -1,16 +1,32 @@
 <!DOCTYPE HTML5>
-<html>
+<html lang="pt_br">
     <head>
         <title>Home</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="estilos.css">
+
     </head>
     <body>
-        <div class="clase1">
-            <div class="classe2">
-                Nome  <input type="text" name="nome" size="20"><br>
-                Senha  <input type="password" name="senha"  size="20">
-            </div>
-        </div>
+        <header>
+            <nav>
+                <a href="#">PIZZA HOUSE</a>
+                <div>...</div>
+            </nav>
+        </header>
+
+        <main>
+            <section>
+                <h1>A pizza house</h1>
+                <img src="https://scontent.fbat1-1.fna.fbcdn.net/v/t1.6435-9/139711907_4916144828460022_1060902063943343065_n.png?_nc_cat=107&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=dnk8eq8ZECgAX9rhXvU&_nc_ht=scontent.fbat1-1.fna&oh=00_AT9CqkCOzsp1z1hgU9bFnoOElUDGzCJuRJfArkcYTG3o9A&oe=62208023"/>
+            </section>
+            <section>
+                <h1>Promoção</h1>
+                
+            </section>
+        </main>
+
+        <footer>
+
+        </footer>
     </body>
 </html>
